# ignacio

./: README.md  audio.py  data.py  lang.py  main.py  pyproject.toml  recording.py  util.py
lang/: en.json  pt.json
schemas/: cache.sql  recording.sql
