[project]
name = "ignacio"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10,<3.14"
dependencies = [
    "dotenv>=0.9.9",
    "platformdirs>=4.4.0",
    "py-cord[voice]",
    "pynacl>=1.5.0",
    "requests>=2.32.5",
]

[tool.uv.sources]
py-cord = { git = "https://github.com/Pycord-Development/pycord" }
